crawler comment update

--- a/web_crawler(20.04.15)/web_crawler.ipynb
+++ b/web_crawler(20.04.15)/web_crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,12 @@
     "class Scraper ():\n",
     "\n",
     "    \n",
+    "    #크롤링할 url을 초기값으로 설정\n",
     "    def __init__(self):\n",
     "        self.url = \"https://movie.naver.com/movie/sdb/rank/rmovie.nhn?sel=cnt&tg=0&date=\"\n",
     "        \n",
     "        \n",
+    "    #url에 연결해서, beautifulsoup을 이용해서 정렬된 soup데이터로 리턴.\n",
     "    def get_html(self, date):\n",
     "        res = requests.get(self.url+str(date))\n",
     "\n",
@@ -29,7 +31,8 @@
     "        return soup\n",
     "\n",
     " \n",
-    "    def change_direction(L):\n",
+    "    #등수 변동이 na, up, down으로 제공되기 때문에, = + -로 변경합니다.\n",
+    "    def change_direction(self, L):\n",
     "        if L == 'na':\n",
     "            L = '='\n",
     "        elif L == 'up':\n",
@@ -40,15 +43,16 @@
     "        return L\n",
     "\n",
     " \n",
-    "    \n",
-    "    def get_cards(self, soup, date):\n",
-    "        #job카드를 가져오자\n",
+    "    #순위 데이터를 가져와서, 이름, 변동여부, 변동등수를 가져와서 csv파일에 저장합니다.\n",
+    "    def get_data(self, soup, date):\n",
+    "        #순위 데이터를 가져오자\n",
     "        listRanking = soup.find(class_ = \"list_ranking\")\n",
     "       \n",
     "        movieName = []\n",
     "        movieUpdown = []\n",
     "        movieNum = []\n",
     "\n",
+    "        #tr태그를 찾아서 각 tr태그에서 tit3, arrow, range ac를 가져옵니다\n",
     "        for tr_tag in listRanking.find_all('tr'):\n",
     "            tag = tr_tag.find(class_='tit3')\n",
     "            if tag:\n",
@@ -56,7 +60,7 @@
     "\n",
     "            updown = tr_tag.find(class_='arrow')\n",
     "            if updown:\n",
-    "                movieUpdown.append(change_direction(updown[\"alt\"]))\n",
+    "                movieUpdown.append(self.change_direction(updown[\"alt\"]))\n",
     "\n",
     "            num = tr_tag.find(class_='range ac')\n",
     "            if num:\n",
@@ -66,7 +70,7 @@
     "        self.write_csv(date, movieName, movieUpdown, movieNum)\n",
     "        \n",
     "        \n",
-    "        \n",
+    "    #CSV파일로 저장합니다. UTF-8을 사용하면, 한글이 깨지기때문에, euc-kr형식으로 저장합니다.\n",
     "    def write_csv(self, date, movieName, movieUpdown, movieNum):\n",
     "        #파일은 데이터 추가, newline 시 공백 추가\n",
     "        file = open(\"movieRank.csv\", \"a\", newline=\"\", encoding  = 'euc-kr')\n",
@@ -77,6 +81,7 @@
     "            \n",
     "        file.close()\n",
     "        \n",
+    "    #movieRank라는 csv파일을 생성하고, 날짜마다 한번씩 크롤링해옵니다.\n",
     "    def scrap(self, startdate, finishdate):\n",
     "        \n",
     "        #처음에 실행할 때는 w로 실행하여, 기존의 데이터가 있으면 초기화\n",
@@ -87,12 +92,12 @@
     "        \n",
     "        for i in range(finishdate - startdate +1):\n",
     "            soup = self.get_html(startdate + i)\n",
-    "            self.get_cards(soup, startdate + i)"
+    "            self.get_data(soup, startdate + i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
